# rqt_console_plus

./: CMakeLists.txt  LICENSE  README.md  mainpage.dox  package.xml
include/rqt_console2/: logs_table_model.hpp  logwidget.hpp  main_window.hpp  modelfilter.hpp  qnode.hpp
include/rqt_console_plus/: logs_table_model.hpp  logwidget.hpp  main_window.hpp  modelfilter.hpp  qnode.hpp
msg/: LogMsg.msg
src/: logs_table_model.cpp  logwidget.cpp  main.cpp  main_window.cpp  modelfilter.cpp  qnode.cpp
ui/: logwidget.ui  main_window.ui
