<?xml version="1.0"?>
<package>
  <name>rqt_console2</name>
  <version>0.1.0</version>
  <description>

     rqt_console2

  </description>
  <maintainer email="vagrant@gmail.com">vagrant</maintainer>
  <author>vagrant</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt5-dev</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>rosbag_storage</build_depend>
  <build_depend>rosout2_msg</build_depend>

  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt5-dev</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>rosbag_storage</run_depend>
  <run_depend>rosout2_msg</run_depend>
 
</package>
